<resources>
    <string name="app_name">RFID TECHNOWAVE</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>

    <string name="confirm_logout">Confirm Logout</string>
    <string name="confirm_logout_msg">Are you sure you want to logout</string>

    <string name="technowave">Technowave ID Systems</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Sign in</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="select_store">Select Store</string>
    <string name="select_location">Select Location</string>
    <string name="select_device">Select Device</string>
    <string name="order_number">Order No</string>
    <string name="sign_in">Sign in</string>
    <string name="main_menu">Main Menu</string>
    <string name="pick_order">Pick Order</string>
    <string name="confirm">Confirm</string>
    <string name="print_label">Print Label</string>
    <string name="order_status">Order Status</string>
    <string name="item_search">Item Search</string>
    <string name="order_picking">Picking Items</string>
    <string name="marking_damage_items">Marking Damage Items</string>
    <string name="select_status">Select Status</string>
    <string name="barcode">Barcode</string>
    <string name="hu_hint">HU Box Number</string>
    <string name="scan_upc_ean_code">Scan UPC/EAN code</string>
    <string name="picking">Picking</string>
    <string name="attributes">Attributes</string>
    <string name="locations">Locations</string>
    <string name="location">Location</string>
    <string name="upc">UPC</string>
    <string name="sku">SKU</string>
    <string name="total_quantity">Tot Qty</string>
    <string name="order_quantity">Order Qty</string>
    <string name="order">Order</string>
    <string name="picked">Picked</string>
    <string name="_short">Short</string>
    <string name="upc_sku">UPC/SKU</string>
    <string name="stock">Stock</string>
    <string name="item">Item</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="image">Image</string>
    <string name="pending_order">Pending Orders</string>
    <string name="completed_order">Completed Orders</string>
    <string name="show_status">Show Status</string>
    <string name="no_item">No details available</string>
    <string name="no_pending_orders">No pending orders</string>
    <string name="no_orders">No orders</string>
    <string name="no_completed_orders">No completed orders</string>
    <string name="no_location_details">No location details available</string>
    <string name="api_settings">Base Url Settings</string>
    <string name="base_url">Base url</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="base_url_helper_text">http://example.com/api/</string>
    <string name="baseUrlCanNotEmpty">Base url cannot be empty</string>
    <string name="userIDCanNotEmpty">UserID cannot be empty</string>
    <string name="passwordCanNotEmpty">Password cannot be empty</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <string name="config_manager">Configuration Manager</string>
    <string name="invalid_store">Invalid Store</string>
    <string name="invalid_store_location">Invalid Store Location</string>
    <string name="invalid_device">Invalid Device</string>
    <string name="invalid_order_no">Invalid Order Number</string>
    <string name="invalid_status">Invalid Status</string>
    <string name="store">Store</string>
    <string name="device">Device</string>
    <string name="order_process">Order Process</string>

    <string name="config_miss_data">Store details not available</string>
    <string name="stock_details">Stock Details</string>
    <string name="stock_take">Stock Take</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="wifi_image">Wifi Image</string>
    <string-array name="order_status">
        <item>Pending</item>
        <item>Completed</item>
    </string-array>


    <string name="downloading">Downloading</string>
    <string name="update_title">M&amp;S Update</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>
    <string name="bulletin">&#8227;</string>
    <string name="search_item">Search Item</string>
    <string name="admin_login">Admin Login</string>
    <string name="change_password">Change password?</string>
    <string name="password_reset">Password Reset</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="select_order">Select Order</string>
    <string name="loading">Loading...</string>
    <string name="sto">STO</string>
    <string name="select_sloc_order">Sloc Order</string>
    <string name="txt_id">id</string>
    <string name="txt_rfid">RFID</string>
    <string name="barcode_not_available">This Barcode is not avaialable!</string>
    <string name="msg_continue">Please Press Ok and then continue!</string>
    <string name="short_found">Short Found!</string>
    <string name="sto_full">Store Transfer Order</string>
    <string name="power_settings">Power Settings</string>
    <string name="closeSto">Close STO</string>
    <string name="company">Company Name</string>
    <string name="str_next">Next</string>
    <string name="branch">Branch</string>
    <string name="division">Division</string>
    <string name="department">Department</string>
    <string name="room">Room</string>
    <string name="custodian">Custodian</string>
    <string name="device_name">Device Name</string>


    <string name="txt_asset_name">Asset Name</string>
    <string name="txt_asset_code">Asset Code</string>
    <string name="choose_a_rfid_device">Choose a RFID Device</string>
    <string name="close">Close</string>
    <string name="building">Building</string>
    <string name="selected_item">Selected item:</string>
    <string name="txt_name">Barcode</string>
    <string name="name">Name</string>
    <string name="serial">Serial</string>
    <string name="currentStoke">C.Stock</string>


</resources>